--- a/css/default.css
+++ b/css/default.css
@@ -1,32 +1,57 @@
-body {
-    color: black;
-    font-size: 16px;
-    margin: 0px auto 0px auto;
-    width: 600px;
+@font-face {
+    font-family: 'Libertinage';
+    src: url('Libertinagec.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Linear';
+    src: url('LinearRegular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
 }
 
+
+body {
+    color: #111;
+    /*font-size: 16px;*/
+    margin:1em auto;
+    max-width:40em;
+    padding:0 .62em;
+    /*font-family: 'linear', 'Helvetica', sans-serif;*/
+    font:1.2em/1.62em sans-serif;
+}
+
+@media print{
+    body{
+        max-width:none
+    }
+}
+
+
 div#header {
-    border-bottom: 2px solid black;
-    margin-bottom: 30px;
-    padding: 12px 0px 12px 0px;
+    border-bottom: 1px solid #777;
+    /*margin-bottom: 30px;*/
+    padding: 12px 0px 22px 0px;
 }
 
 div#logo a {
-    color: black;
+    font-family: 'Libertinage', 'Palatino', serif;
+    color: #444;
     float: left;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 40px;
     text-decoration: none;
 }
 
 div#header #navigation {
     text-align: right;
+    bottom 0;
 }
 
 div#header #navigation a {
-    color: black;
-    font-size: 18px;
-    font-weight: bold;
+    color: #444;
+    font-size: 12px;
+    font-weight: thin;
     margin-left: 12px;
     text-decoration: none;
     text-transform: uppercase;
@@ -41,16 +66,93 @@ div#footer {
     text-align: right;
 }
 
-h1 {
-    font-size: 24px;
-}
-
-h2 {
-    font-size: 20px;
-}
-
 div.info {
     color: #555;
     font-size: 14px;
     font-style: italic;
+}
+
+h1 {
+    color: #444;
+    font-size: 30px;
+    padding: -10px 0px 0px 0px;
+}
+
+h2 {
+    border-bottom: 1px solid #CCCCCC;
+    color: #444;
+    font-size: 24px;
+    text-align: right;
+}
+
+h3 {
+    font-size: 18px;
+    text-decoration:underline
+}
+
+h4 {
+    font-size: 16px;
+    text-decoration:underline
+}
+
+h5 {
+    font-size: 14px;
+    text-decoration:underline
+}
+
+h6 {
+    color: #777777;
+    background-color: inherit;
+    font-size: 14px;
+    text-decoration:underline
+}
+
+hr {
+    height: 0.2em;
+    border: 0;
+    color: #CCCCCC;
+    background-color: #CCCCCC;
+}
+
+p, blockquote, ul, ol, dl, li, table, pre {
+    margin: 15px 0;
+}
+
+code, pre {
+    border-radius: 3px;
+    background-color: #F8F8F8;
+    color: inherit;
+}
+
+code {
+    font-size: 12px;
+    border: 1px solid #EAEAEA;
+    margin: 0 2px;
+    padding: 0 5px;
+}
+
+pre {
+    border: 1px solid #CCCCCC;
+    line-height: 1.25em;
+    overflow: auto;
+    padding: 6px 10px;
+}
+
+pre > code {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+a, a:visited {
+    color: #4183C4;
+    background-color: inherit;
+    text-decoration: none;
+}
+
+blockquote {
+    margin: 1em 3em;
+    color: #999;
+    border-left: 2px solid #999;
+    padding-left: 1em; 
 }
