--- a/css/default.css
+++ b/css/default.css
@@ -31,7 +31,7 @@ body {
 
 div#header {
     border-bottom: 1px solid #777;
-    /*margin-bottom: 30px;*/
+    margin-bottom: -10px;
     padding: 12px 0px 22px 0px;
 }
 
@@ -74,15 +74,19 @@ div.info {
 
 h1 {
     color: #444;
-    font-size: 30px;
-    padding: -10px 0px 0px 0px;
+    font-size: 40px;
+    /*padding: -10px 0px 0px 0px;*/
+    text-align: right;
+    border-right: 1px solid #CCCCCC;
+    padding-right: 20px;
 }
 
 h2 {
-    border-bottom: 1px solid #CCCCCC;
+    border-left: 1px solid #CCCCCC;
+    padding-left: 20px;
     color: #444;
     font-size: 24px;
-    text-align: right;
+    text-align: left;
 }
 
 h3 {
