--- a/css/default.css
+++ b/css/default.css
@@ -19,7 +19,7 @@ body {
     max-width:40em;
     padding:0 .62em;
     /*font-family: 'linear', 'Helvetica', sans-serif;*/
-    font:1.2em/1.62em sans-serif;
+    font:1.0em/1.62em sans-serif;
 }
 
 @media print{
@@ -58,7 +58,7 @@ div#header #navigation a {
 }
 
 div#footer {
-    border-top: solid 2px black;
+    border-top: solid 1px #777;
     color: #555;
     font-size: 12px;
     margin-top: 30px;
@@ -75,10 +75,10 @@ div.info {
 h1 {
     color: #444;
     font-size: 40px;
-    /*padding: -10px 0px 0px 0px;*/
     text-align: right;
     border-right: 1px solid #CCCCCC;
     padding-right: 20px;
+    margin-bottom: 10px;
 }
 
 h2 {
@@ -112,11 +112,19 @@ h6 {
 }
 
 hr {
-    height: 0.2em;
+    height: 1px;
     border: 0;
     color: #CCCCCC;
     background-color: #CCCCCC;
 }
+
+hr {
+    /*border: 0;
+    height: 1px;
+    color: #CCCCCC;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}*/
+
 
 p, blockquote, ul, ol, dl, li, table, pre {
     margin: 15px 0;
