--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,9 @@
     Posted on $date$
     $if(author)$
         by $author$
+    $endif$ </br>
+    $if(tags)$
+    Tags: $tags$
     $endif$
 </div>
 
