--- a/css/default.css
+++ b/css/default.css
@@ -16,10 +16,10 @@ body {
     color: #111;
     /*font-size: 16px;*/
     margin:1em auto;
-    max-width:40em;
+    max-width:35em;
     padding:0 .62em;
     /*font-family: 'linear', 'Helvetica', sans-serif;*/
-    font:1.0em/1.62em sans-serif;
+    font:1.2em/1.62em sans-serif;
 }
 
 @media print{
@@ -74,7 +74,7 @@ div.info {
 
 h1 {
     color: #444;
-    font-size: 40px;
+    font-size: 32px;
     text-align: right;
     border-right: 1px solid #CCCCCC;
     padding-right: 20px;
@@ -83,7 +83,7 @@ h1 {
 
 h2 {
     border-left: 1px solid #CCCCCC;
-    padding-left: 20px;
+    padding-left: 18px;
     color: #444;
     font-size: 24px;
     text-align: left;
@@ -122,8 +122,8 @@ hr {
     /*border: 0;
     height: 1px;
     color: #CCCCCC;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-}*/
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); */
+}
 
 
 p, blockquote, ul, ol, dl, li, table, pre {
@@ -156,11 +156,39 @@ pre > code {
     padding: 0;
 }
 
-a, a:visited {
+/*Link code from: http://mrmrs.io/links/ */
+a {
+  transition: color .4s;
+  color: #265C83;
+}
+
+a:link,
+a:visited { color: #265C83; }
+a:hover   { color: #7FDBFF; }
+a:active  {
+  transition: color .3s;
+  color: #007BE6;
+}
+
+.link { text-decoration: none; }
+
+/*a {
+    color: #444;
+    text-decoration: none;
+    font-style: bold;
+}
+a : visited {
+    color: #999;
+    text-decoration: none;
+    font-style: italic;
+}
+/*
+
+/* a, a:visited {
     color: #4183C4;
     background-color: inherit;
     text-decoration: none;
-}
+}*/
 
 blockquote {
     margin: 1em 3em;
