--- a/templates/default.html
+++ b/templates/default.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Clear Air Turbulence - $title$</title>
         <link rel="stylesheet" href="/css/default.css" />
+        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div id="header">
