move the pages posts around a bit, do some work on the css and the site

--- a/templates/default.html
+++ b/templates/default.html
@@ -8,27 +8,28 @@
         <link rel="stylesheet" href="/css/default.css" />
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:l" rel="stylesheet">
+         <link href="https://fonts.googleapis.com/css?family=Merriweather:l" rel="stylesheet"> 
+
     </head>
-    <body>
-        <div id="header">
+    <body>  
+        <div id="wrapper">
             <div id="logo">
-                <a href="/">Clear Air Turbulence</a>
+                    <a href="/">Clear Air Turbulence</a>
             </div>
             <div id="navigation">
-                <a href="/">Home</a>
-                <a href="/about.html">About</a>
-                <a href="/archive.html">Archive</a>
+                <a href="/about.html">About</a> // <a href="/archive.html">Archive</a>
             </div>
-        </div>
-
-        <div id="content">
-            <h1>$title$</h1>
-            $body$
-        </div>
-
-        <div id="footer">
-            Site generated using
-            <a href="http://jaspervdj.be/hakyll">Hakyll</a>
+            <div id="break">
+            </div>
+            <div id="content">
+                <h1>$title$</h1>
+                $body$
+            </div>
+            <div id="footer">
+                <a href="https://github.com/AdamHarries/clearairturbulence.co.uk">source</a> // <a href="https://twitter.com/harriesadam">give me feedback</a> //  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licensed CC BY-SA 4.0</a>.
+            </div>
         </div>
     </body>
 </html>
