--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: 'Libertinage';
     src: url('Libertinagec.ttf') format('truetype');
     font-weight: normal;
@@ -10,17 +10,19 @@
     font-weight: normal;
     font-style: normal;
 }
-
+*/
 
 body {
-    color: #111;
+    color: #444;
+    /*background-color: #FCFCFF;*/
+    /*background-color: #FFFFFF;*/
     /*font-size: 16px;*/
     margin:1em auto;
-    max-width:35em;
+    max-width:55em;
     padding:0 .62em;
-    font-family: 'linear', 'Helvetica', sans-serif;
-    /*font:1.0em/1.62em sans-serif;*/
-    font-size: 16px;
+    font-family: 'Merriweather', serif;
+    font-size: 14px;
+    font-style: 'light';
 }
 
 @media print{
@@ -30,47 +32,72 @@ body {
 }
 
 
-div#header {
+div#break {
+    clear: both;
     border-bottom: 1px solid #777;
     margin-bottom: -10px;
-    padding: 12px 0px 22px 0px;
+    /*padding: 12px 0px 22px 0px;*/
+    font-family: 'Merriweather Sans', sans-serif;
+    font-style: 'light';
 }
 
 div#logo a {
-    font-family: 'Libertinage', 'Palatino', serif;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-style: 'light';
     color: #444;
     float: left;
     font-size: 40px;
     text-decoration: none;
 }
 
-div#header #navigation {
+div#navigation {
+    font-family: 'Merriweather Sans', sans-serif;
     text-align: right;
     bottom 0;
-}
-
-div#header #navigation a {
-    color: #444;
     font-size: 12px;
     font-weight: thin;
-    margin-left: 12px;
-    text-decoration: none;
+    /*margin-left: 12px;*/
+    
     text-transform: uppercase;
 }
 
+div#navigation a {
+    color: #444;
+    text-decoration: none;   
+}
+
 div#footer {
+    clear: both;
     border-top: solid 1px #777;
+    
     color: #555;
     font-size: 12px;
     margin-top: 30px;
-    padding: 12px 0px 12px 0px;
+    /*padding: 12px 0px 12px 0px;*/
     text-align: right;
 }
 
+div#content {
+    clear: both;
+}
+
 div.info {
+    border-top: solid 1px #777;
     color: #555;
     font-size: 14px;
     font-style: italic;
+    text-align: right;
+    /*border-right: 1px solid #CCCCCC;*/
+    /*padding-top: 10px;*/
+    /*padding-right: 20px;*/
+    /*margin-bottom: 10px;*/
+}
+
+h1, h2, h3, h4, h5, h6 { 
+       /*font-family: 'Merriweather Sans', sans-serif;*/
+   font-family: 'Merriweather', serif;
+   font-style: 'light';
+
 }
 
 h1 {
@@ -136,8 +163,8 @@ p, blockquote, ul, ol, dl, li, table, pre {
 
 code, pre {
     border-radius: 3px;
-    background-color: #F8F8F8;
-    color: inherit;
+    background-color: #F0F0FF;
+    color: #000;
 }
 
 code {
