move to stack completely, general cleanup

--- a/templates/default.html
+++ b/templates/default.html
@@ -1,8 +1,9 @@
-<!doctype html>
-<html lang="en">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Clear Air Turbulence - $title$</title>
         <link rel="stylesheet" href="/css/default.css" />
@@ -11,6 +12,10 @@
 
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:l" rel="stylesheet">
          <link href="https://fonts.googleapis.com/css?family=Merriweather:l" rel="stylesheet"> 
+         <link href="https://fonts.googleapis.com/css?family=Raleway|Spectral" rel="stylesheet"> 
+
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
 
     </head>
     <body>  
@@ -31,5 +36,7 @@
                 <a href="https://github.com/AdamHarries/clearairturbulence.co.uk">source</a> // <a href="https://twitter.com/harriesadam">give me feedback</a> //  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licensed CC BY-SA 4.0</a>.
             </div>
         </div>
+                <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
     </body>
 </html>
