--- a/templates/default.html
+++ b/templates/default.html
@@ -11,7 +11,7 @@
         <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:l" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Merriweather:l" rel="stylesheet"> 
+         <link href="https://fonts.googleapis.com/css?family=Merriweather:l,li" rel="stylesheet"> 
          <link href="https://fonts.googleapis.com/css?family=Raleway|Spectral" rel="stylesheet"> 
 
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -36,7 +36,7 @@
                 <a href="https://github.com/AdamHarries/clearairturbulence.co.uk">source</a> // <a href="https://twitter.com/harriesadam">give me feedback</a> //  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licensed CC BY-SA 4.0</a>.
             </div>
         </div>
-                <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     </body>
 </html>
