--- a/templates/default.html
+++ b/templates/default.html
@@ -24,7 +24,7 @@
                     <a href="/">Clear Air Turbulence</a>
             </div>
             <div id="navigation">
-                <a href="/about.html">About</a> // <a href="/archive.html">Archive</a>
+                <a href="/about.html">About</a> // <a href="/projects.html">Projects</a> // <a href="/longform.html">Longform</a> // <a href="/Unfinished.html">Unfinished</a>
             </div>
             <div id="break">
             </div>
@@ -37,6 +37,5 @@
             </div>
         </div>
                 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
     </body>
 </html>
