--- a/templates/default.html
+++ b/templates/default.html
@@ -24,7 +24,7 @@
                     <a href="/">Clear Air Turbulence</a>
             </div>
             <div id="navigation">
-                <a href="/about.html">About</a> // <a href="/projects.html">Projects</a> // <a href="/longform.html">Longform</a> // <a href="/Unfinished.html">Unfinished</a>
+                <a href="/about.html">About</a> // <a href="/projects.html">Projects</a> // <a href="/writing.html">Writing</a>
             </div>
             <div id="break">
             </div>
