more overhauling - almost done

--- a/templates/default.html
+++ b/templates/default.html
@@ -10,8 +10,7 @@
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:l" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Merriweather:l,li" rel="stylesheet"> 
+         <link href="https://fonts.googleapis.com/css?family=Merriweather:n,i,l,li" rel="stylesheet"> 
          <link href="https://fonts.googleapis.com/css?family=Raleway|Spectral" rel="stylesheet"> 
 
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -20,14 +19,16 @@
     </head>
     <body>  
         <div id="wrapper">
-            <div id="logo">
-                    <a href="/">Clear Air Turbulence</a>
+            <div id="header">
+                <div id="logo">
+                        <a href="/">Clear Air Turbulence</a>
+                </div>
+                <div id="navigation">
+                    <a href="/projects.html">Projects</a> // <a href="/writing.html">Writing</a>
+                </div>
             </div>
-            <div id="navigation">
-                <a href="/about.html">About</a> // <a href="/projects.html">Projects</a> // <a href="/writing.html">Writing</a>
-            </div>
-            <div id="break">
-            </div>
+            <div id="break"/>
+            
             <div id="content">
                 <h1>$title$</h1>
                 $body$
