--- a/css/default.css
+++ b/css/default.css
@@ -1,16 +1,6 @@
-/*@font-face {
-    font-family: 'Libertinage';
-    src: url('Libertinagec.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Linear';
-    src: url('LinearRegular.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-*/
+/*html {
+    overflow-y: scroll;
+}*/
 
 body {
     color: #444;
@@ -19,10 +9,10 @@ body {
     /*font-size: 16px;*/
     margin:1em auto;
     max-width:55em;
-    padding:0 .62em;
+    /*padding:0 .62em;*/
     font-family: 'Merriweather', serif;
     font-size: 14px;
-    font-weight: 'lighter';
+    /*font-weight: 'lighter';*/
 }
 
 @media print{
@@ -35,27 +25,25 @@ body {
 div#break {
     clear: both;
     border-bottom: 1px solid #777;
-    margin-bottom: -10px;
-    /*padding: 12px 0px 22px 0px;*/
+    margin-bottom: -1em;
+}
+
+div#header {
+    padding: 0em 1em;
     font-family: 'Raleway', sans-serif;
-    font-style: 'light';
+    font-weight: lighter;
 }
 
 div#logo a {
-    font-family: 'Raleway', sans-serif;
-    font-weight: inherit;
     color: #444;
     float: left;
-    font-size: 40px;
+    font-size: 28px;
     text-decoration: none;
 }
 
 div#navigation {
-    font-family: 'Raleway', sans-serif;
     text-align: right;
-    bottom 0;
     font-size: 12px;
-    font-weight: thin;    
     text-transform: uppercase;
 }
 
@@ -69,80 +57,90 @@ div#footer {
     border-top: solid 1px #777;    
     color: #555;
     font-size: 12px;
-    margin-top: 30px;
+    /*margin-top: 30px;*/
     text-align: right;
 }
 
 div#content {
     clear: both;
+    padding: 0em 1em;
+}
+
+div.corecontent {
+
 }
 
 div.info {
-    border-top: solid 1px #777;
+    border-top: solid 1px #CCC;
     color: #555;
     font-size: 14px;
     font-style: italic;
     text-align: right;
+    padding: 1em 0em;
+}
+
+span.abstract {
+    font-style: italic;
+    padding: 0px 5px;
+}
+
+.tag {
+    font-size: 12px;
+    color: #666;
+    padding: 2px;
+    border: solid 1px #EEE;
+}
+
+p {
+    padding: 0 1em;
 }
 
 h1, h2, h3, h4, h5, h6 { 
-       /*font-family: 'Merriweather Sans', sans-serif;*/
+   /*font-family: 'Merriweather Sans', sans-serif;*/
    font-family: 'Merriweather', serif;
    font-weight: inherit;
+   /*text-decoration: underline;*/
    color: #444;
 }
 
 h1 {
-    font-size: 25px;
+    font-size: 32px;
     text-align: right;
-    border-right: 1px solid #CCCCCC;
-    padding-right: 20px;
-    margin-bottom: 10px;
+    /*border-right: 1px solid #CCCCCC;*/
+    padding: 10px 00px;
+    margin: 0px 0px;
+    /*margin-bottom: 10px;*/
 }
 
 h2 {
-    border-left: 1px solid #CCCCCC;
-    padding-left: 10px;
+    /*border-left: 1px solid #CCCCCC;*/
     font-size: 20px;
     text-align: left;
 }
 
 h3 {
     font-size: 18px;
-    text-decoration:underline
 }
 
 h4 {
     font-size: 16px;
-    text-decoration:underline
 }
 
 h5 {
     font-size: 14px;
-    text-decoration:underline
 }
 
 h6 {
     color: #777777;
     background-color: inherit;
     font-size: 14px;
-    text-decoration:underline
 }
 
 hr {
     height: 1px;
     border: 0;
-    color: #CCCCCC;
-    background-color: #CCCCCC;
+    color: #FF0000;
 }
-
-hr {
-    /*border: 0;
-    height: 1px;
-    color: #CCCCCC;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); */
-}
-
 
 p, blockquote, ul, ol, dl, li, table, pre {
     margin: 15px 0;
@@ -178,6 +176,7 @@ pre > code {
 a {
   transition: color .4s;
   color: #265C83;
+  text-decoration: none;
 }
 
 a:link,
@@ -189,24 +188,6 @@ a:active  {
 }
 
 .link { text-decoration: none; }
-
-/*a {
-    color: #444;
-    text-decoration: none;
-    font-style: bold;
-}
-a : visited {
-    color: #999;
-    text-decoration: none;
-    font-style: italic;
-}
-/*
-
-/* a, a:visited {
-    color: #4183C4;
-    background-color: inherit;
-    text-decoration: none;
-}*/
 
 blockquote {
     margin: 1em 3em;
@@ -254,6 +235,7 @@ pre {
     -moz-tab-size: 6; /*fix massive tabs*/
     -o-tab-size:   6;
     tab-size:      6;
+    margin: inherit -1em;
 }
 
 #homepageCode > pre > code
