add last modified time to pages

--- a/templates/post.html
+++ b/templates/post.html
@@ -11,9 +11,9 @@ $endif$
 		Posted on $date$ 
         </br>
 	$endif$
-    $if(author)$
-        by $author$
-        </br>
+    $if(lastModified)$
+        Last modified: $lastModified$
+    </br>
     $endif$
     $if(tags)$
       Tags: $tags$
