add links to github history

--- a/templates/post.html
+++ b/templates/post.html
@@ -12,7 +12,7 @@ $endif$
         </br>
 	$endif$
     $if(lastModified)$
-        Last modified: $lastModified$
+        Last modified: <a href="https://github.com/AdamHarries/clearairturbulence.co.uk/commits/master/$githubLink$">$lastModified$</a>
     </br>
     $endif$
     $if(tags)$
