write a quick post on getting the modification time with hakyll

--- a/templates/post.html
+++ b/templates/post.html
@@ -8,12 +8,10 @@ $endif$
 </div>
 <div class="info">
 	$if(date)$
-		Posted on $date$ 
-        </br>
+		Posted on $date$</br>
 	$endif$
     $if(lastModified)$
-        Last modified: <a href="https://github.com/AdamHarries/clearairturbulence.co.uk/commits/master/$githubLink$">$lastModified$</a>
-    </br>
+        Last modified: <a href="https://github.com/AdamHarries/clearairturbulence.co.uk/commits/master/$githubLink$">$lastModified$</a></br>
     $endif$
     $if(tags)$
       Tags: $tags$
