--- a/templates/default.html
+++ b/templates/default.html
@@ -28,9 +28,8 @@
                 </div>
             </div>
             <div id="break"/>
-            
             <div id="content">
-                <h1>$title$</h1>
+                <h1>$title$</h1><p style="margin-bottom: -1em"/>
                 $body$
             </div>
             <div id="footer">
