--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,6 +1,6 @@
-<ul>
+<ul class="postlist">
 $for(posts)$
-<li>
+<li class="postitem">
 <a href="$url$" >$title$</a>$if(unfinished)$   <a href="/work-in-progress.html"><span class="tag" style="margin-left:0.25em">Unfinished</span></a>$endif$</br>$if(abstract)$<span style="font-style: italic">$abstract$</span>$endif$
 </li>
 $endfor$
