--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,7 @@ body {
     color: #444;
     background-color: #FFFFFF;
     margin:1em auto;
-    max-width:48%;
+    max-width:40em;
     font-family: 'Merriweather', serif;
     font-size: 100%;
     font-weight: lighter;
