--- a/css/default.css
+++ b/css/default.css
@@ -102,6 +102,12 @@ p {
     padding: 0 1em;
 }
 
+img {
+    /*padding: 0 10%;*/
+    width: 100%;
+    height: auto;
+}
+
 /* 
     Style unordered lists so that they're nicer looking
  */
@@ -149,10 +155,11 @@ h2 {
 h3 {
     margin-bottom: -0.25em;
     padding-top: 0.25em;
-    font-size: 120%;
+    font-size: 110%;
 }
 
 h4 {
+    padding: 0 1em;
     margin-bottom: -0.25em;
     padding-top: 0.25em;
     font-size: 100%;
@@ -160,6 +167,7 @@ h4 {
 }
 
 h5 {
+    padding: 0 1em;
     font-size: 80%;
     margin-bottom: -0.25em;
     padding-top: 0.25em;
