--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,7 @@ body {
     max-width:48%;
     font-family: 'Merriweather', serif;
     font-size: 100%;
+    font-weight: lighter;
 }
 
 /* I don't know why this is here? */
