finish renaming so that we have a hash

--- a/templates/default.html
+++ b/templates/default.html
@@ -33,9 +33,9 @@
                 $body$
             </div>
             <div id="footer">
-                <a href="https://github.com/AdamHarries/clearairturbulence.co.uk">source</a> // <a href="https://twitter.com/harriesadam">give me feedback</a> //  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licensed CC BY-SA 4.0</a>.
+               $if(githash)$<a href="https://github.com/AdamHarries/clearairturbulence.co.uk/commits/$githash$/$filepath$">$githash$</a> // $endif$<a href="https://github.com/AdamHarries/clearairturbulence.co.uk">source</a> // <a href="https://twitter.com/harriesadam">give me feedback</a> //  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licensed CC BY-SA 4.0</a>.
             </div>
         </div>
-                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </body>
 </html>
