--- a/templates/post.html
+++ b/templates/post.html
@@ -11,7 +11,7 @@ $endif$
 		Posted on $date$</br>
 	$endif$
     $if(lastModified)$
-        Last modified: <a href="https://github.com/AdamHarries/clearairturbulence.co.uk/commits/master/$githubLink$">$lastModified$</a></br>
+        Last modified: <a href="https://github.com/AdamHarries/clearairturbulence.co.uk/commits/master/$filepath$">$lastModified$</a></br>
     $endif$
     $if(tags)$
       Tags: $tags$
